<resources>
    <string name="app_name">花瓣</string>
    <string name="action_settings">设置</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_scrolling">Scrolling</string>
    <string name="title_activity_Image">Image</string>
    <string name="title_activity_Login">Login</string>
    <string name="title_activity_image_detail">ImageDetail</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Search%s</string>
    <string name="title_activity_module">Module</string>
    <string name="title_activity_board_detail">BoardDetail</string>
    <string name="title_activity_my_following">Following</string>
    <string name="title_activity_user">User Information</string>

    <string name="title_fragment_gather">Gather</string>
    <string name="title_fragment_board">Boards</string>
    <string name="title_fragment_user">User</string>
    <string name="title_fragment_like">Like</string>


    <string name="title_fragment_attention_pins">Attention Gather</string>
    <string name="title_fragment_attention_board">Attention Board</string>


    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_not_notify">not new data</string>
    <string name="snack_message_login_success">login success</string>
    <string name="snack_message_net_error">网络错误，请检查网络设置</string>
    <string name="snack_message_timeout_error">请求超时，请重试</string>
    <string name="snack_message_password_error">密码错误</string>
    <string name="snack_message_unknown_error">未知错误</string>
    <string name="snack_message_data_error">数据出错</string>
    <string name="snack_action_to_setting">设置</string>


    <string name="nav_user_name">username</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="nav_attention">attention</string>
    <string name="nav_gather">gather</string>
    <string name="nav_message">message</string>
    <string name="nav_friends">friend</string>
    <string name="nav_used_scan">scan</string>


    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_like">Like</string>
    <string name="action_bar_download">Download</string>
    <string name="action_bar_gather">Gather</string>
    <string name="action_bar_follow">Follow</string>
    <string name="action_bar_user_setting">User Setting</string>

    <string name="hint_search">key</string>
    <string name="hint_null_history">没有搜索历史</string>

    <string name="text_search_history">搜索历史</string>
    <string name="text_reference">分类浏览</string>

    <string name="net_error">net error</string>
    <string name="net_error_data">net error on data</string>


    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">非法的用户名</string>
    <string name="error_invalid_password">密码至少6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_foot_loading">loading</string>
    <string name="text_foot_error">error</string>
    <string name="text_foot_end">end</string>

    <string name="format_like_number">%d 喜欢</string>
    <string name="format_gather_number">%d 采集</string>
    <string name="format_attention_number">%d 关注</string>
    <string name="format_board_number">%d 画板</string>
    <string name="format_user_number">%d 用户</string>
    <string name="format_board_follower_number">被 %d 人关注</string>
    <string name="text_by_username">由 %s</string>
    <string name="format_fans_number">%d 粉丝</string>
    <string name="format_fans_follow">%1$d 粉丝 %2$d 关注</string>
    <string name="text_edit">编辑</string>
    <string name="text_following">关注</string>
    <string name="text_followed">已关注</string>
    <string name="text_auto_login_fail">自动登录失败</string>

    <string name="text_image_describe_null">采集描述</string>
    <string name="text_is_default">默认</string>
    <string name="text_board_describe_null">noting describe</string>
    <string name="text_recommend">recommend</string>
    <string name="text_to">To</string>
    <string name="title_activity_settings">设置</string>

    <string name="dialog_title_gather">采集</string>
    <string name="dialog_title_delete">删除</string>
    <string name="dialog_title_edit">编辑</string>
    <string name="dialog_title_add">添加</string>
    <string name="dialog_negative">取消</string>
    <string name="dialog_gather_positive">采集</string>
    <string name="dialog_add_positive">添加</string>
    <string name="dialog_edit_positive">确定</string>
    <string name="dialog_edit_neutral">Delete This</string>
    <string name="dialog_delete_positive">删除画板</string>
    <string name="dialog_delete_attention_title">提示</string>
    <string name="dialog_delete_attention_content">确定要删除这个画板吗？删除后这个画板内的所有采集都会被删除。</string>
    <string name="dialog_exit_account_attention">是否确认退出登录？</string>
    <string name="dialog_pin_edit_des">采集描述：</string>
    <string name="dialog_pin_edit_board">画板：</string>
    <string name="dialog_pin_edit_delete">删除采集</string>
    <string name="dialog_pin_edit_delete_warning">确定要删除此采集吗？</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_gather_warning">这张图片已经在你的 %s 画板里了</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="header_user_collection">采集</string>
    <string name="header_user_board">画板</string>
    <string name="header_user_fans">粉丝</string>

    <string name="nav_homepage">首页</string>
    <string name="nav_newest">最新</string>
    <string name="nav_popular">热门</string>
    <string name="nav_discover">发现</string>
    <string name="nav_settings">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_exit">退出账号</string>
    <string name="menu_action_search">搜索</string>

    <string name="login_skip">随便看看</string>
    <string name="logining_in">正在登录...</string>
    <string name="login_success">登陆成功</string>
    <string name="login_error">登录失败</string>

    <string name="empty_data">这里什么都没有</string>
    <string name="no_more_data">没有更多了</string>
    <string name="need_login">请先登录</string>
    <string name="go_to_login">去登录</string>
    <string name="create_new_board">创建画板</string>
    <string name="add_new_collection">添加采集</string>
    <string name="follow_action_follow">关注</string>
    <string name="follow_action_unfollow">取消关注</string>
    <string name="follow_operate_success">关注成功</string>
    <string name="unfollow_operate_success">取消关注成功</string>
    <string name="operate_request_failed">请求操作失败</string>
    <string name="add_board_operate_success">创建成功</string>
    <string name="edit_board_operate_success">修改成功</string>
    <string name="delete_board_operate_success">已删除</string>
    <string name="gather_new_one">添加采集</string>
    <string name="upload_pin">上传图片</string>
    <string name="upload_failed">上传失败，请稍后重试</string>
    <string name="gather_failed">采集失败， 请稍后重试</string>
    <string name="gather_success_toast">成功采集到 %s </string>
    <string name="checkout_board">查看采集</string>


    <string-array name="user_appbar_title_array">
        <item>@string/board</item>
        <item>@string/collection</item>
        <item>@string/like</item>
        <item>@string/following</item>
    </string-array>

    <string name="board_tran">board_tran</string>
    <string name="avatar_tran">avatar_tran</string>
    <string name="image_tran">image_tran</string>

    <string name="collect_to">采集到</string>
    <string name="gather_des">采集描述</string>
    <string name="related_recommend">相关推荐</string>
    <string name="board">画板</string>
    <string name="collection">采集</string>
    <string name="like">喜欢</string>
    <string name="following">关注</string>
    <string name="download">下载</string>
    <string name="gather_anyway">仍要采集</string>

    <string name="search_actv_hint">搜索采集、画板、用户</string>
    <string name="clear_search_history">清空搜索记录</string>

    <string-array name="type_tabs_titles">
        <item>@string/collection</item>
        <item>@string/type_tab_title_board</item>
        <item>@string/type_tab_title_user</item>
    </string-array>

    <string name="type_tab_title_board">推荐画板</string>
    <string name="type_tab_title_user">推荐用户</string>
    
    <string name="exit_hint">再按一次退出</string>
</resources>
