<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_homepage"
            android:title="@string/nav_homepage" />
        <item
            android:id="@+id/nav_newest"
            android:icon="@drawable/ic_newest"
            android:title="@string/nav_newest" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_popular_24dp"
            android:title="@string/nav_popular" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_discover"
            android:title="@string/nav_discover" />

    </group>

    <item android:title="花瓣">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
