<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_gather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout_gather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_gather"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            app:elevation="2dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <com.dd.CircularProgressButton
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="0dp"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                app:cpb_colorIndicator="@color/colorPrimary"
                app:cpb_colorProgress="@color/transparent"
                app:cpb_selectorIdle="@drawable/bg_btn_upload_grey"
                app:cpb_textIdle="@string/upload_pin" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll_gather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/img_gather"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                fresco:actualImageScaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="left"
                android:text="@string/collect_to"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_gather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="left"
                android:text="@string/gather_des"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_gather_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.dd.CircularProgressButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:textColor="@color/grey_200"
                    android:textSize="18sp"
                    app:cpb_selectorIdle="@drawable/bg_btn_cancel_grey"
                    app:cpb_textIdle="@string/dialog_negative" />

                <com.dd.CircularProgressButton
                    android:id="@+id/btn_gather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:textColor="@color/grey_200"
                    android:textSize="18sp"
                    app:cpb_colorIndicator="@color/colorPrimary"
                    app:cpb_colorProgress="@color/transparent"
                    app:cpb_selectorIdle="@drawable/bg_btn_gather_pink"
                    app:cpb_textIdle="@string/collection" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>